Fix persisent apps being the wrong size

--- a/res/css/structures/_LeftPanel.scss
+++ b/res/css/structures/_LeftPanel.scss
@@ -54,7 +54,7 @@ limitations under the License.
 
 }
 
-.mx_LeftPanel .mx_AppTileFullWidth  {
+.mx_LeftPanel .mx_AppTileMini {
     height: 132px;
 }
 
